fixing overflow

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -6,6 +6,11 @@
   position: relative;
 }
 
+.footer > *{
+  padding: 0 2rem;
+  margin-inline: auto;
+}
+
 .footer::before {
   content: '';
   position: absolute;
@@ -14,7 +19,7 @@
   width: 100%;
   height: 100%;
   background-color: var(--clr-dark);
-  transform: translateX(-90%);
+  transform: translateX(-2rem);
   z-index: -10;
 }
 .footer::after {
@@ -25,7 +30,7 @@
   width: 100%;
   height: 100%;
   background-color: var(--clr-dark);
-  transform: translateX(90%);
+  transform: translateX(2rem);
   z-index: -10;
 }
 .toptext {
@@ -39,7 +44,7 @@
 }
 
 .cta {
-  padding: 6rem 0;
+  padding: 6rem 2rem;
   display: flex;
   flex-direction: column;
   gap: 3rem;
@@ -94,7 +99,8 @@
   grid-template-areas:
     'one one one'
     'two three four';
-  justify-content: space-around;
+  /*justify-content: space-around;*/
+  text-align: center;
 }
 
 .navsection ul li {
@@ -123,6 +129,7 @@
   .navsection {
     grid-template-columns: repeat(4, 1fr);
     grid-template-areas: 'one two three four';
+    text-align: left;
   }
   .navsection > *:nth-child(1) {
     font-family: var(--ff-500);
