--- a/src/pages/Magazine/Magazine.module.css
+++ b/src/pages/Magazine/Magazine.module.css
@@ -37,6 +37,7 @@
 }
 
 .articles {
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   margin-bottom: 3rem;
